--- a/src/App.css
+++ b/src/App.css
@@ -12,23 +12,22 @@
   font-style: normal;
 }
 
+@font-face{
+  font-family: 'Nunito';
+  src: url('./assets/fonts/Nunito/static/Nunito-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 #root {
   width: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Patrick Hand', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 .App{
   background: #f8f2e6;
   color: #4c6f59;
   min-height: 100vh;
-}
-
-.navigation{
-  font-family: 'Patrick Hand', sans-serif;
-}
-
-.navigation-land{
-  font-family: 'Inter', cursive;
 }
